tests/baselines/reference/externalModuleResolution2.errors.txt
foo.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== consumer.ts (0 errors) ====
    import x = require('./foo');
    x.X // .ts should be picked
==== foo.ts (1 errors) ====
    module M2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var X = 1;
    }
    export = M2
    
==== foo.d.ts (0 errors) ====
    declare module M1 {
        export var Y:number;
    }
    export = M1
    
    